2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newgrp.c: Use a %lu format and cast group and user IDs to
	unsigned long integers.
	* src/newgrp.c: The ID argument of audit_logger is an unsigned
	int.
	* src/newgrp.c: Ignore the return value of signal() (the signal
	handlers are assumed to be the default one and are restored
	later).
	* src/newgrp.c: Do not checl if a pid_t is < 0, check if equal
	to (pid_t)-1.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/isexpired.c: Cast number of days to a long integer.
	* libmisc/isexpired.c: Add brackets and parenthesis.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/copydir.c: Do not specify a size of arrays in the
	prototypes.
	* libmisc/copydir.c: Use a size_t for the length of strings.
	* libmisc/copydir.c: Cast the return value of malloc().
	* libmisc/copydir.c: The size argument of write() is a size_t.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/pwd2spwd.c: Cast number of days to a long integer.
	* libmisc/pwd2spwd.c: Use SHADOW_SP_FLAG_UNSET for the initial
	value of sp.sp_flag.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/defines.h: Include <config.h> since it uses the macro that
	might be defined in this header file.
	* lib/defines.h: Prefer checking if HAVE_LOCALE_H or ENABLE_NLS
	are defined (rather than set to non 0).
	* lib/defines.h: The dummy implementations of bindtextdomain() and
	textdomain() should return a pointer. Return NULL instead of
	/* empty */
	* lib/defines.h: Define SHADOW_SP_FLAG_UNSET, to be used for the
	initialization of sp_flag field of the shadow structures.
	* lib/defines.h: Define LC_ALL, needed even if HAVE_LOCALE_H is
	not defined.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/sulog.c: Ignore the return value of umask() when the
	mask is restored.
	* libmisc/sulog.c: Add brackets.